2008-06-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (method_encode_clauses): Take a mempool
	as parameter and use it to allocate the clause array.

	* reflection.c (mono_image_get_field_on_inst_token): Free
	the inflated type after encoding it.

	* reflection.c (mono_dynamic_image_free): Free each element
	of MonoDynamicImage::gen_params.

	* reflection.c (reflection_methodbuilder_to_mono_method):
	Allocate the generic param array from the mempool.
	Allocate signature params from the mempool.

	* reflection.c (mono_reflection_generic_class_initialize):
	Free inflated fields after been used.

2008-05-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c: Reapply the memory leak fixes as they no
	longer make mono crash.

2008-05-30 Rodrigo Kumpera  <rkumpera@novell.com>

	* reflection.c (mono_type_get_object): Don't store the suplied
	MonoType with type_hash. A caller which pass a type that
	was mono_metadata_type_dup'ed cannot free it reliably, as type_hash
	might end with a pointer to freed memory.
	The solution is to use byval_arg or this_arg from the associated
	MonoClass of the supplied type.

2008-05-29  Zoltan Varga  <vargaz@gmail.com>

	* icall.c: Revert the rest of the last change as it breaks the build too.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c: Revert a leak fix as it's breaking the build.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* appdomain.c (mono_make_shadow_copy): Fix another leak of dir_name.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* appdomain.c (mono_make_shadow_copy): We leaked dir_name.

2008-05-29 Rodrigo Kumpera  <rkumpera@novell.com>

	* icall.c: Fix some memory leaks.

2008-05-29  Dick Porter  <dick@ximian.com>

	* threadpool.c (mono_thread_pool_remove_socket): Always remove the
	async socket operations from the pending list when a socket
	closes.  Leaving it until the threadpool services the event
	exposes a race condition when a socket descriptor is reused.
	Fixes bug 377589.
